Fix: cleared homepage white space issue from Bootstraps row class negative margin

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,7 @@
 .banner {
     background: url('/media/home-page.jpg') no-repeat center center;
     background-size: cover;
-    height: 100vh; /* Set height to 100% of viewport height */
-    width: 100%; /* Set width to 100% */
+    height: 80vh;
 }
 
 /* from Bulma */
@@ -131,10 +130,10 @@
         top: 0;
         right: 0;
         left: 0;
-        z-index: 1030;
+        z-index: 3;
     }
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 150px;
     }
 }
